# bstk

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: build-and-test-asan.yml  build-and-test-linux.yml  build-and-test-windows.yml  build-and-test.yml  increment-patch-version.yml  linux-build-and-test.yml  weekly-build-and-test-asan.yml  weekly-build-and-test.yml  windows-build-and-test.yml
benchmarks/: CMakeLists.txt
src/: CMakeLists.txt
src/bstk/core/: bitmask.hpp  exception.cpp  exception.hpp  export.hpp  version.hpp
src/bstk/core/impl/: dllmain.cpp  tinywin.hpp  utils.hpp
src/bstk/res/: bstk.rc
tests/: CMakeLists.txt
tests/src/core/bitmask/: test.cpp
tests/src/core/exception/: test.cpp
tests/src/core/version/: test.cpp
tools/: Increment-PatchVersion.ps1
